unpackaged/main/default/objects/CheckList2__c/CheckList2__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuración del checklist planta2</description>
    <label>CheckList2</label>
</CustomObject>