unpackaged/main/default/objects/CheckList2__c/fields/AcabadoExteriorPintura__c.field-meta.xml
<CustomField>
    <fullName>AcabadoExteriorPintura__c</fullName>
    <label>Acabado exterior y pintura</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>