unpackaged/main/default/objects/CheckList2__c/fields/AcabadoInteriorPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>AcabadoInteriorPlantaAlta__c</fullName>
    <label>Acabado interior PA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>