unpackaged/main/default/objects/CheckList2__c/fields/AccesoriosElectricosPrepPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>AccesoriosElectricosPrepPlantaAlta__c</fullName>
    <label>Accesorios eléctricos y preparación PA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>