unpackaged/main/default/objects/CheckList2__c/fields/AzulejosPisos__c.field-meta.xml
<CustomField>
    <fullName>AzulejosPisos__c</fullName>
    <label>Azulejos y pisos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>