unpackaged/main/default/objects/CheckList2__c/fields/AzulejosPisosPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>AzulejosPisosPlantaAlta__c</fullName>
    <label>Azulejos y pisos PA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>