unpackaged/main/default/objects/CheckList2__c/fields/BanquetasBardasPropiasMedianeras__c.field-meta.xml
<CustomField>
    <fullName>BanquetasBardasPropiasMedianeras__c</fullName>
    <label>Banquetas, bardas propias y medianeras</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>