unpackaged/main/default/objects/CheckList2__c/fields/ColocacionCalentadoresSolares__c.field-meta.xml
<CustomField>
    <fullName>ColocacionCalentadoresSolares__c</fullName>
    <label>Colocación de calentadores solares</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>