unpackaged/main/default/objects/CheckList2__c/fields/ImpermeabilizacionVentilasPoliductos__c.field-meta.xml
<CustomField>
    <fullName>ImpermeabilizacionVentilasPoliductos__c</fullName>
    <label>Impermeabilización ventilas y poliduct</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>