unpackaged/main/default/objects/CheckList2__c/fields/LavaderoConexionesColaderasRegistro__c.field-meta.xml
<CustomField>
    <fullName>LavaderoConexionesColaderasRegistro__c</fullName>
    <label>Lavadero conexiones coladeras y registro</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>