unpackaged/main/default/objects/CheckList2__c/fields/MarcosPuertasVentanasCHapasPA__c.field-meta.xml
<CustomField>
    <fullName>MarcosPuertasVentanasCHapasPA__c</fullName>
    <label>Marcos, puertas, ventanas, chapas PA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>