unpackaged/main/default/objects/CheckList2__c/fields/PruebaElectrica__c.field-meta.xml
<CustomField>
    <fullName>PruebaElectrica__c</fullName>
    <label>Prueba eléctrica</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>