unpackaged/main/default/objects/CheckList2__c/fields/PruebaHidraulica__c.field-meta.xml
<CustomField>
    <fullName>PruebaHidraulica__c</fullName>
    <label>Prueba hidráulica</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>