unpackaged/main/default/objects/CheckList2__c/fields/PruebaPluvial__c.field-meta.xml
<CustomField>
    <fullName>PruebaPluvial__c</fullName>
    <label>Prueba pluvial</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>