unpackaged/main/default/objects/CheckList2__c/fields/PruebasGas__c.field-meta.xml
<CustomField>
    <fullName>PruebasGas__c</fullName>
    <label>Pruebas de gas</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>