unpackaged/main/default/objects/CheckList2__c/fields/PruebasSanitarias__c.field-meta.xml
<CustomField>
    <fullName>PruebasSanitarias__c</fullName>
    <label>Pruebas sanitarias</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>