unpackaged/main/default/objects/CheckList2__c/fields/SanitariosLavabosAccBanoPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>SanitariosLavabosAccBanoPlantaAlta__c</fullName>
    <label>Sanitarios, lavabos, acc. de baño PA</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>